--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,17 @@
 @import 'bootstrap/dist/css/bootstrap';
 
-.navbar-brand{
-  font-size: 10rem;
+.search-area {
+  padding-top: 2rem;
+}
+
+.no-left-padding {
+  padding-left: 0 !important;
+}
+
+.no-right-padding {
+  padding-right: 0 !important;
+}
+
+.results-block {
+  display: inline-block !important;
 }
