--- a/app/views/friends/_list.html.erb
+++ b/app/views/friends/_list.html.erb
@@ -15,7 +15,7 @@
             <th scope="row"><%= friend.email %></th>
             <td><%= friend.first_name %></td>
             <td><%= friend.last_name %></td>
-            <td><%= link_to "Stop Following", '#', method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-warning" %></td>
+            <td><%= link_to "Stop Following", friendship_path(friend), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-warning" %></td>
           </tr>
         <% end %>
       </tbody>
