--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,4 +20,11 @@
 .user-name {
   list-style: none;
   margin-right: 8rem;
+  width: 50%;
+}
+
+#navbarSupportedContent {
+  .navbar-nav.mr-auto {
+    width: 100%;
+  }
 }
